fixtures/corpus/valid/module-billing.rune
[MOD] billing

[REQ] invoice.issue(IssueDto): InvoiceDto
    db:invoice.save(IssueDto): InvoiceDto
      timeout
    [RET] InvoiceDto

[DTO] IssueDto: customerId, amount
    a request to issue an invoice

[DTO] InvoiceDto: id, amount
    an issued invoice

[TYP] customerId: string
    the customerId
[TYP] amount: number
    the amount
[TYP] id: string
    the id
