fixtures/corpus/invalid/ret-missing-value.rune
[REQ] order.place(InDto): OutDto
    db:order.save(InDto): OutDto
      timeout
    [RET]

[DTO] InDto: a
    in

[DTO] OutDto: b
    out
